# cfd-lab

./: .gitignore  CMakeLists.txt  Makefile  Presentation.odp  ProjectReport.odt  README.md  README.txt  boundary_configurator.c  boundary_configurator.h  boundary_val.c  boundary_val.h  convergence-Solid.txt  create-geometry.sh  emptyCavity.pgm  helper.c  helper.h  init.c  init.h  iterations-Fluid.txt  iterations-Solid.txt  logger.c  logger.h  main.c  parallel.c  parallel.h  precice-config.xml  precice_adapter.c  precice_adapter.h  rescale-geometry.py  run_solid_convection  run_solid_exchange  run_solid_plate  sor.c  sor.h  speedup.c  test.c  testGeometry.pgm  timing.c  timing.h  uvp.c  (+3 more)
Cases/ComplexFlowOverStep/: ComplexFlowOverStep.pgm
Cases/CriticalCase/: criticalCaseMask.pgm  criticalCase_small.pgm  criticalCase_smallMask.pgm
Cases/FlowOverStep/: FlowOverStep.pgm  FlowOverStep_mask.pgm
Cases/Obstacle/: Obstacle.pgm  ObstacleMask.pgm  ObstacleMask_x2.pgm  Obstacle_x2.pgm
Cases/ShiftedFlowOverStep/: ShiftedFlowOverStep.pgm  ShiftedFlowOverStep_x4.pgm  ShiftedFlowOverStep_x4_mask.pgm  ShiftedFlowOverStep_x8.pgm  ShiftedFlowOverStep_x8_mask.pgm
Cases/SimpleBend/: SimpleBend.pgm
Cases/SimpleChannel/: SimpleChannel.pgm
DebugTest/DrivenCavity/: emptyCavity.pgm
Geometries/: F1-heat-exchange_82x60.pgm
Olga_temp/: picture.c
Presentation/: ComplexFlowOverStep.avi  Presentation.odp
Report/: Makefile  autocompile.loop.sh  cfd-lab-report.tex
Report/Bib/: references.bib
Report/Style/: packages.tex  paper-layout.tex
Solid_convection/0.1/: T  gradTx  gradTy
Solid_convection/0.2/: T  gradTx  gradTy
Solid_convection/0.3/: T  gradTx  gradTy
Solid_convection/0.4/: T  gradTx  gradTy
Solid_convection/0.5/: T  gradTx  gradTy
Solid_convection/0.6/: T  gradTx  gradTy
Solid_convection/0.7/: T  gradTx  gradTy
Solid_convection/0.8/: T  gradTx  gradTy
Solid_convection/0.9/: T  gradTx  gradTy
Solid_convection/1/: T  gradTx  gradTy
Solid_convection/1.1/: T  gradTx  gradTy
Solid_convection/1.2/: T  gradTx  gradTy
Solid_convection/1.3/: T  gradTx  gradTy
Solid_convection/1.4/: T  gradTx  gradTy
Solid_convection/1.5/: T  gradTx  gradTy
Solid_convection/1.6/: T  gradTx  gradTy
Solid_convection/1.7/: T  gradTx  gradTy
Solid_convection/1.8/: T  gradTx  gradTy
Solid_convection/1.9/: T  gradTx  gradTy
Solid_convection/2/: T  gradTx  gradTy
Solid_convection/2.1/: T  gradTx  gradTy
Solid_convection/2.2/: T  gradTx  gradTy
Solid_convection/2.3/: T  gradTx  gradTy
Solid_convection/2.4/: T  gradTx  gradTy
Solid_convection/2.5/: T  gradTx  gradTy
Solid_convection/2.6/: T  gradTx  gradTy
Solid_convection/2.7/: T  gradTx  gradTy
Solid_convection/2.8/: T  gradTx  gradTy
Solid_convection/2.9/: T  gradTx  gradTy
Solid_convection/3/: T  gradTx  gradTy
Solid_convection/3.1/: T  gradTx  gradTy
Solid_convection/3.2/: T  gradTx  gradTy
Solid_convection/3.3/: T  gradTx  gradTy
Solid_convection/3.4/: T  gradTx  gradTy
Solid_convection/3.5/: T  gradTx  gradTy
Solid_convection/3.6/: T  gradTx  gradTy
Solid_convection/3.7/: T  gradTx  gradTy
Solid_convection/3.8/: T  gradTx  gradTy
Solid_convection/3.9/: T  gradTx  gradTy
Solid_convection/4/: T  gradTx  gradTy
Solid_convection/4.1/: T  gradTx  gradTy
Solid_convection/4.2/: T  gradTx  gradTy
Solid_convection/4.3/: T  gradTx  gradTy
Solid_convection/4.4/: T  gradTx  gradTy
Solid_convection/4.5/: T  gradTx  gradTy
Solid_convection/4.6/: T  gradTx  gradTy
Solid_convection/4.7/: T  gradTx  gradTy
Solid_convection/4.8/: T  gradTx  gradTy
Solid_convection/4.9/: T  gradTx  gradTy
Solid_convection/5/: T  gradTx  gradTy
Solid_plate/0.1/: T  gradTx  gradTy
Solid_plate/0.2/: T  gradTx  gradTy
Submission/: init.c  main.c  uvp.c
Tests/: CMakeLists.txt  Makefile  getProcessCoordinates.test.c  getProcessCoordinates.test.h  getProcessNeighbours.2x3.test.c  getProcessNeighbours.3x2.test.c  getProcessNeighbours.test.c  getProcessNeighbours.test.h  pressureComm.2x3.test.c  pressureComm.3x2.test.c  pressureComm.test.h  testing.c  testing.h  tests  tests.c  uvComm.2x3.test.c  uvComm.3x2.test.c  uvComm.test.h
Tests/FlowOverStep/: FlowOverStep.pgm
Tests/FluidTrap1/: FluidTrap1Pronounced.pgm
Tests/FluidTrap2/: FluidTrap2Pronounced.pgm
Tests/RayleighBernardConvection/: RayleighBenardConvection1.pgm
WS2/Project/: CMakeLists.txt  LICENSE  Makefile  README.txt  boundary_configurator.c  boundary_configurator.h  boundary_val.c  boundary_val.h  create-geometry.sh  helper.c  helper.h  init.c  init.h  karman_vortex.pgm  logger.c  logger.h  main.c  parallel.c  parallel.h  sor.c  sor.h  testGeometry.pgm  uvp.c  uvp.h  visual.c  visual.h
WS2/Project/Tests/: CMakeLists.txt  getProcessCoordinates.test.c  getProcessNeighbours.test.h  pressureComm.test.c  testing.c  testing.h  tests.c  uvComm.test.c  uvComm.test.h
WS2/Project/rbConvection/: geometry.pgm
geometries/: convection.pgm  solid_plate.pgm
precice-configs/: precice_config_convection_implicit.xml  precice_config_plate_explicit.xml
(+49 files in other folders)
